[package]
name = "approx"
version.workspace = true
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
license = "Apache-2.0"
description = "Approximate floating point equality comparisons and assertions."
edition = "2021"

documentation = "https://docs.rs/approx"
homepage = "https://github.com/brendanzab/approx"
repository = "https://github.com/brendanzab/approx"
readme = "README.md"

keywords = [
    "approximate",
    "assert",
    "comparison",
    "equality",
    "float",
]

[package.metadata.docs.rs]
features = ["num_complex", "array_impl", "tuple_impl", "ordered-float"]

[lib]
name = "approx"

[features]
default = ["array_impl", "tuple_impl"]
array_impl = []
tuple_impl = ["paste"]
vec_impl = []
indexmap_impl = ["dep:indexmap"]
derive = ["dep:approx-derive"]
ordered-float = ["dep:ordered-float"]
num_complex = ["dep:num-complex"]

[dependencies]
num-traits = { version = "0.2.19", default-features = false }
num-complex = { version = "0.4.6", optional = true }
ordered-float = { version = "5.0", optional = true }
approx-derive = { path = "../approx-derive/", version = "0.6.0-rc1", optional = true }
paste = { version = "1.0.15", optional = true }
indexmap = { version = "2.12.1", optional = true, default-features = false }
